--- a/src/app/pages/interests/interests.component.html
+++ b/src/app/pages/interests/interests.component.html
@@ -31,7 +31,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label>Description</label>
-                                        <div>{{selectedOrder.staffOrTransportRequest.description}}</div>
+                                        <div [innerHtml]="selectedOrder.staffOrTransportRequest.description">{{selectedOrder.staffOrTransportRequest.description}}</div>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
